# protobuf_rust_generator

./: Cargo.toml  README.md  realtime-bidding.proto
src/: main.rs
