[package]
name = "open_rtb_model_gen"
version = "0.1.0"
authors = ["Guillaume Balaine <igosuki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
protoc-rust = { git = "https://github.com/stepancheg/rust-protobuf" }
